--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2",
+    "simplebar": "^4.2.3",
+    "simplebar-react": "^1.2.3",
     "socket.io": "^2.3.0"
   },
   "scripts": {
