--- a/package.json
+++ b/package.json
@@ -1,34 +1,27 @@
 {
   "name": "chat",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "version": "1.0.0",
+  "description": "",
+  "author": "Michal Kurowski",
+  "license": "",
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@svgr/webpack": "^4.3.3",
+    "css-loader": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.1.2",
     "simplebar": "^4.2.3",
     "simplebar-react": "^1.2.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "style-loader": "^1.0.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "dependencies": {
+    "compression": "^1.7.4",
+    "express": "^4.17.1"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "nodemonConfig": {
+    "ignore": ["dist/*", "src/*"]
   }
 }
